Update a reference to an old version